--- a/templates/news_delete.html
+++ b/templates/news_delete.html
@@ -44,4 +44,6 @@
         {% csrf_token %}
         <input type="submit" value="подтвердить">
     </form>
+    <hr>    
+    <a href="/news/">    Новости</a>
 {% endblock content %} 
