--- a/templates/news_search.html
+++ b/templates/news_search.html
@@ -60,4 +60,6 @@
     {% else %}
         <p2>Нет новостей с заданными параметрами.</p2>
     {% endif %}
+    <hr>    
+    <a href="/news/">    Новости</a>
 {% endblock content %}
