--- a/templates/one_news.html
+++ b/templates/one_news.html
@@ -13,4 +13,6 @@
     <p2>{{ one_news.creation_datetime|date:'d-M-Y h:m' }}</p2>
     <hr>
     <p1>{{ one_news.content|profanity }}</p1>
+    <hr>    
+    <a href="/news/">    Новости</a>
 {% endblock content %}
