--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -40,7 +40,7 @@
             <a class="nav-link" href="/contacts/">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/personal/">Personal</a>
+            <a class="nav-link" href="/accounts/login/">Profile</a>
           </li>
         </ul>
       </div>
