--- a/templates/news_add.html
+++ b/templates/news_add.html
@@ -12,4 +12,6 @@
         {{ form }} <!-- Теперь нам нужна только готовая форма и кнопка -->
         <input type="submit" value="Добавить новость">
     </form>
+    <hr>
+    <a href="/news/">    Новости</a>
 {% endblock content %}
