--- a/templates/news_search.html
+++ b/templates/news_search.html
@@ -11,7 +11,7 @@
 <!-- В контенте на странице мы выводим все новости -->
 {% block content %}
     <h1>Все новости</h1>
-    <p1>Количество новостей {{ filter.qs|length }}</p1>
+    <p1>Количество новостей на странице {{ filter.qs|length }}</p1>
     <hr>
     <!-- Перед таблицей добавим форму для поиска -->
     <form method="GET">
