--- a/templates/news_added.html
+++ b/templates/news_added.html
@@ -6,8 +6,8 @@
         <title>Document</title>
     </head>
     <body>
-        <p2>Здравствуйте, {{ name }}. Новая статья в категории {{ category }}!</p2><hr>
-        <a href="http://np-d.test.com:8000{% url 'one_news' one_news.id %}">{{ one_news.title }}</a><br>
-        <p1>{{ one_news.content|truncatechars:50 }}</p1>
+        <p2>Здравствуйте, {{ name }}. Новая статья в категории {{ category_label }}!</p2><hr>
+        <p1>{{ news.title }}</p1><br>
+        <a href="http://np-d.test.com:8000{% url 'one_news' news.id %}">{{ news.content|truncatechars:50 }}</a>
     </body>
 </html>
